# rust-easyadmin

./: .env.dist  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  bootstrap.rs  diesel.toml  docker-compose.yml  models.rs
controllers/: auth.rs
controllers/admin/: home_controller.rs
controllers/auth/: forgot_password_controller.rs  login_controller.rs  register_controller.rs
controllers/frontend/: home_controller.rs
database/: connection.rs  schema.rs
database/migrations/2020-10-22-232727_create_users_table/: down.sql  up.sql
database/migrations/2020-10-22-233752_create_user_sessions_table/: up.sql
models/: user.rs  user_session.rs
views/admin/: dashboard.rhb
views/auth/: forgot_password.rhb  login.rhb  register.rhb
views/frontend/: index.rhb
