[package]
name = "easyadmin_app"
version = "0.1.0"
authors = ["Default Name <email>"]
description = "A skeleton for easyadmin app written in rust."
edition = "2018"
license = "MIT"

[dependencies]
easyadmin = { version = "0.1.0", path = "lib" }
easyadmin_cli = { version = "0.1.0", path = "cli" }
diesel = { version = "1.4.5", features = [ "mysql", "chrono" ] }

[[bin]]
name = "easyadmin-app"
path = "bootstrap.rs"